objects/Assesment__c.object
<CustomObject>
    <fields>
        <fullName>AIMSweb_ELA_Scale_score__c</fullName>
        <label>AIMSweb ELA Scale score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIMSweb_ELA_Student_Target_Score__c</fullName>
        <label>AIMSweb ELA Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIMSweb_Math_Scale_score__c</fullName>
        <label>AIMSweb Math Scale score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIMSweb_Math_Student_Target_Score__c</fullName>
        <label>AIMSweb Math Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_to_Z_Alpha_Scale_Student_Target_Score__c</fullName>
        <label>A to Z Alpha Scale Student Target Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_to_Z_Alpha_Scale__c</fullName>
        <label>A to Z Alpha Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_motivation__c</fullName>
        <label>Academic motivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_motivation_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Academic motivation z-score</label>
        <precision>11</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_orientation__c</fullName>
        <label>Action orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_orientation_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Action orientation z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Rating__c</fullName>
        <label>Age at Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Rating_in_Months__c</fullName>
        <label>Age at Rating in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approaches_Grade_Level__c</fullName>
        <description>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</description>
        <inlineHelpText>STAAR performance standards relate levels of test performance to the expectations defined in the state-mandated curriculum standards known as the Texas Essential Knowledge and Skills (TEKS).</inlineHelpText>
        <label>Approaches Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assertiveness__c</fullName>
        <label>Assertiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assertiveness_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Assertiveness z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Name__c</fullName>
        <formula>Type__r.Name</formula>
        <label>Assessment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Results__c</fullName>
        <label>Assessment Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Ability_Score__c</fullName>
        <description>An average of student&apos;s overall score in Word Recognition, Vocabulary Knowledge, and Reading Comprehension</description>
        <inlineHelpText>An average of student&apos;s overall score in Word Recognition, Vocabulary Knowledge, and Reading Comprehension</inlineHelpText>
        <label>Average Ability Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Attendance__c</fullName>
        <label>Average Daily Attendance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical_thinking__c</fullName>
        <label>Critical thinking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_thinking_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Critical thinking z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIBELS_GLE_Student_Target_Score__c</fullName>
        <label>DIBELS GLE Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIBELS_Grade_Level_Equivalent_Score__c</fullName>
        <label>DIBELS Grade Level Equivalent Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRA_GLE_Student_Target_Score__c</fullName>
        <label>DRA GLE Student Target Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRA_Grade_Level_Equivalent_Score__c</fullName>
        <label>DRA Grade Level Equivalent Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRA_Oral_Reading__c</fullName>
        <label>DRA Oral Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_Q10__c</fullName>
        <label>D Q10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_Q11__c</fullName>
        <label>D Q11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_Q12__c</fullName>
        <label>D Q12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Administered__c</fullName>
        <description>Date the assessment was administered</description>
        <inlineHelpText>Date the assessment was administered</inlineHelpText>
        <label>Date Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Enrolled__c</fullName>
        <description>Number of days student is enrolled in school for the given time period</description>
        <inlineHelpText>Number of days student is enrolled in school for the given time period</inlineHelpText>
        <label>Days Enrolled</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daze_Student_Target_Score__c</fullName>
        <description>A task that measures how well a student understands a passage they read silently</description>
        <inlineHelpText>A task that measures how well a student understands a passage they read silently</inlineHelpText>
        <label>Daze Student Target Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daze__c</fullName>
        <description>A task that measures how well a  student understands a passage they read silently</description>
        <inlineHelpText>A task that measures how well a  student understands a passage they read silently</inlineHelpText>
        <label>Daze</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Description__c</fullName>
        <label>Decision Making Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <color>#FF6666</color>
                    <label>N</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <color>#33FFFF</color>
                    <label>T</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <color>#33FF33</color>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Making_Percentile__c</fullName>
        <label>Decision Making Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Raw_Score__c</fullName>
        <label>Decision Making Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Making_T_Score__c</fullName>
        <label>Decision Making T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difficulty_of_Goal__c</fullName>
        <label>Difficulty of Goal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District_Benchmark__c</fullName>
        <label>District Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Target</fullName>
                </value>
                <value>
                    <fullName>Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>Needs Much Improvement</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emotion_control__c</fullName>
        <label>Emotion control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emotion_control_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Emotion control z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Empathy_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Empathy z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the goal for this assessment been met?</description>
        <label>Goal Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_directed_Behavior_Description__c</fullName>
        <label>Goal-directed Behavior Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <color>#FF6666</color>
                    <label>N</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <color>#33FFFF</color>
                    <label>T</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <color>#33FF33</color>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_directed_Behavior_Percentile__c</fullName>
        <label>Goal-directed Behavior Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_directed_Behavior_Raw_Score__c</fullName>
        <label>Goal-directed Behavior Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_directed_Behavior_T_Score__c</fullName>
        <label>Goal-directed Behavior T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_progress__c</fullName>
        <label>Goal progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attained</fullName>
                </value>
                <value>
                    <fullName>Made Progress</fullName>
                </value>
                <value>
                    <fullName>Goal set</fullName>
                </value>
                <value>
                    <fullName>Stayed the same</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_set__c</fullName>
        <label>Goal set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_at_Rating__c</fullName>
        <label>Grade at Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSA_Deleted_Reason__c</fullName>
        <label>HSA Deleted Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSA_Deleted__c</fullName>
        <description>1: Student responded &quot;Not at all&quot; for all questions
2: Student responded &quot;Often&quot; for all questions
3: Student responded &quot;Sometimes&quot; for all questions
4: Student responded &quot;Almost Always&quot; for all questions
5: No means calculated
6: Less than 6 means calculated
7: Not in Roster
8: Below 4th Grade/Under 9</description>
        <inlineHelpText>1: Student responded &quot;Not at all&quot; for all questions
2: Student responded &quot;Often&quot; for all questions
3: Student responded &quot;Sometimes&quot; for all questions
4: Student responded &quot;Almost Always&quot; for all questions
5: No means calculated
6: Less than 6 means calculated
7: Not in Roster
8: Below 4th Grade/Under 9</inlineHelpText>
        <label>HSA Deleted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSA_Type__c</fullName>
        <label>HSA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSA_VER__c</fullName>
        <label>HSA VER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOC_Learning_interest__c</fullName>
        <description>Indicator of challenge for Learning interest</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC Learning interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Academic_motivation__c</fullName>
        <description>Indicator of challenge for Academic motivation</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Academic motivation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Action_orientation__c</fullName>
        <description>Indicator of challenge for Action orientation</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Action orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Assertiveness__c</fullName>
        <description>Indicator of challenge for Assertiveness</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Assertiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Critical_thinking__c</fullName>
        <description>Indicator of challenge for Critical thinking</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Critical thinking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Emotion_control__c</fullName>
        <description>Indicator of challenge for Emotion control</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Emotion control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Empathy__c</fullName>
        <description>Indicator of challenge for Empathy</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Optimism__c</fullName>
        <description>Indicator of challenge for Optimism</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Optimism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Perseverance__c</fullName>
        <description>Indicator of challenge for Perseverance</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Perseverance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Reflection__c</fullName>
        <description>Indicator of challenge for Reflection</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Reflection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Relationships_with_adults__c</fullName>
        <description>Indicator of challenge for Relationships with adults</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Relationships with adults</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Relationships_with_peers__c</fullName>
        <description>Indicator of challenge for Relationships with peers</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Relationships with peers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_School_Bonding__c</fullName>
        <description>Indicator of challenge for School Bonding</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for School Bonding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOC_for_Trust__c</fullName>
        <description>Indicator of challenge for Trust</description>
        <inlineHelpText>0: Not challenge; 1: Challenge</inlineHelpText>
        <label>IOC for Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>